Correct title/idea for this workshop

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -8,7 +8,7 @@
   ACM 978-1-XXXX-XXXX-X/XX/XX.\\
 }
 
-\title{Personal Social Machines}
+\title{Using Distributed Information Stores for Patient-Clinician Health Data Sharing}
 
 \numberofauthors{3}
 % Notice how author names are alternately typesetted to appear ordered in 2-column format;
@@ -47,10 +47,10 @@
 }
 
 % Paper metadata (use plain text, for PDF inclusion and later re-using, if desired)
-\def\plaintitle{Personal Social Machines}
+\def\plaintitle{Using Distributed Information Stores for Patient-Clinician Health Data Sharing}
 \def\plainauthor{Daniel A. Smith, Max Van Kleek, Nigel R. Shadbolt}
-\def\plainkeywords{social machines, personal data, linked data}
-\def\plaingeneralterms{Social Machines, Personal Data}
+\def\plainkeywords{personal data, patient care, healthcare, information stores}
+\def\plaingeneralterms{Personal Data, Patient Care, Healthcare, Information Stores}
 
 \hypersetup{
   % Your metadata go here
@@ -76,7 +76,7 @@
 
 \begin{abstract}
 
-
+Electronic integrated health records have...
 
 \end{abstract}
 
