--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -76,7 +76,7 @@
 
 \begin{abstract}
 
-Electronic integrated health records have...
+Existing approaches to electronic integrated health records have largely focused on centralised information architectures, where patient data is held in a single repository, and accessed over the internet. However, there are a number of benefits to both patients and clinicians in a decentralised information approach to health records.
 
 \end{abstract}
 
