--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -95,6 +95,23 @@ Existing approaches to electronic integrated health records have largely focused
 
 \section{Introduction}
 
+A key goal in improving patient-clinician communication is
+establishing a common context for communication with which a shared
+understanding can be established.  This understanding is
+bi-directional, in the sense that, both the patient needs to be able
+to properly interpret what the clincian is trying to convey to him or
+her, while the clinician needs to be able to arrive at an accurate
+characterisation of the patient's situation, as updated since the last
+time he or she met with the patient.
+
+One of the most promising technologies to help provide a common
+context of communication is the patient-centric electronic health
+record\cite{ehr} which constitute a complete medical history of
+a patient as recorded through his or her entire life. (...)
+
+% challenges to 
+% background on authors
+% 
 
 
 
