--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -65,10 +65,12 @@
   %urlcolor=black,
 }
 
+
 \usepackage{graphicx}   % for EPS use the graphics package instead
 \usepackage{balance}    % useful for balancing the last columns
 \usepackage{bibspacing} % save vertical space in references
 
+\usepackage{url}
 
 \begin{document}
 
@@ -114,7 +116,25 @@ a patient as recorded through his or her entire life. (...)
 % 
 
 
+\section{Personal Electronic Sensors}
 
+There has been a surge in popularity of personal electronic sensors as
+part of the ``quantified-self'' movement to measure and improve one's health.
+Wireless sensors such as the Fit-bit and Nike FuelBand and small and discreet,
+yet provide the wearer with a wealth of information about their own activity level.
+In particular, wearers have a desire to improve their health and fitness, based on
+the feedback they receive from their device.
+
+The measurements from such devices are of particular interest because of the
+frequency and granularity of measurement that they perform - showing minute-by-minute updates
+throughout the day, with no clinical involvement. 
+
+In addition to fitness monitors, the market for quantified self sensors has
+expanded into areas of personal health. For example, there are sensors for
+measuring blood oxygenation~\footnote{SpO2 Blood Oxygenation sensor: \url{http://ispo2.com}},
+Heart Rate Variability and Respiratory Rate~\footnote{Zensorium Tinke, heart and respiratory rate sensor: \url{http://www.zensorium.com/tinke/}} and
+Temperature and Galvanic Skin Response~\footnote{BodyMedia Core 2, temperature and GSR sensor: \url{http://www.bodymedia.com}}.
+There is even a wireless fork that informs you how long you spent eating~\footnote{HapiLabs HapiFork: \url{http://hapilabs.com/products-hapifork.asp}}.
 
 %% =============================================================================
 %\section{Introduction}
