Minor aesthetic fixes

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -131,10 +131,13 @@ throughout the day, with no clinical involvement.
 
 In addition to fitness monitors, the market for quantified self sensors has
 expanded into areas of personal health. For example, there are sensors for
-measuring blood oxygenation~\footnote{SpO2 Blood Oxygenation sensor: \url{http://ispo2.com}},
-Heart Rate Variability and Respiratory Rate~\footnote{Zensorium Tinke, heart and respiratory rate sensor: \url{http://www.zensorium.com/tinke/}} and
-Temperature and Galvanic Skin Response~\footnote{BodyMedia Core 2, temperature and GSR sensor: \url{http://www.bodymedia.com}}.
-There is even a wireless fork that informs you how long you spent eating~\footnote{HapiLabs HapiFork: \url{http://hapilabs.com/products-hapifork.asp}}.
+measuring blood oxygenation\footnote{SpO2 Blood Oxygenation sensor: \url{http://ispo2.com}},
+Heart Rate Variability and Respiratory Rate\footnote{Zensorium Tinke, heart and respiratory rate sensor: \newline \indent \indent \indent \url{http://www.zensorium.com/tinke/}} and
+Temperature and Galvanic Skin Response\footnote{BodyMedia Core 2, temperature and GSR sensor: \newline \indent \indent \indent  \url{http://www.bodymedia.com}}.
+The diet aspect of weight loss is also covered, by products such as a wireless fork that informs you how long you spent eating\footnote{HapiLabs HapiFork: \newline \indent \indent \indent  \url{http://hapilabs.com/products-hapifork.asp}}.
+
+
+
 
 %% =============================================================================
 %\section{Introduction}
