More about electronic sensors

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -136,6 +136,11 @@ Heart Rate Variability and Respiratory Rate\footnote{Zensorium Tinke, heart and 
 Temperature and Galvanic Skin Response\footnote{BodyMedia Core 2, temperature and GSR sensor: \newline \indent \indent \indent  \url{http://www.bodymedia.com}}.
 The diet aspect of weight loss is also covered, by products such as a wireless fork that informs you how long you spent eating\footnote{HapiLabs HapiFork: \newline \indent \indent \indent  \url{http://hapilabs.com/products-hapifork.asp}}.
 
+Currently these products tend to work in isolation, where the readings from a single product
+are presented either on the device themselves, or via a smartphone or website. However,
+their use could be integrated with clinical care, in order to monitor patients, and to give an
+insight into their lifestyle.
+
 
 
 
