--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -98,16 +98,33 @@ Existing approaches to electronic integrated health records have largely focused
 A key goal in improving patient-clinician communication is
 establishing a common context for communication with which a shared
 understanding can be established.  This understanding is
-bi-directional, in the sense that, both the patient needs to be able
-to properly interpret what the clincian is trying to convey to him or
-her, while the clinician needs to be able to arrive at an accurate
-characterisation of the patient's situation, as updated since the last
-time he or she met with the patient.
+bi-directional, in the sense that the patient needs to be able to
+effectively interpret what the clincian is trying to convey to him or
+her, but also the clinician needs to be able to arrive at an accurate
+characterisation of the patient's situation (often under time
+constraints) as updated since the last time the clinician met with the
+patient.
 
-One of the most promising technologies to help provide a common
-context of communication is the patient-centric electronic health
-record\cite{ehr} which constitute a complete medical history of
-a patient as recorded through his or her entire life. (...)
+One of the most promising technologies that has the potential to help
+provide such a common context is the patient-centric electronic health
+record (henceforth EHR)\cite{ehr}, a digital representation of the
+complete medical history of an individual as recorded by clinicians
+throughout a patient's life. The EHR promises to enable both
+patients and their clinicians unfettered access to the patient's
+medical data, including diagnostics, reports, and history of
+interventions.  This means that clinicians can more easily review a
+patient's long-term history in the course of basing interpretations
+and interventions. Moreover, since patients have access to their own
+medical histories, there is (theoretically) a basis by which patients
+can understand the justifications for clinicial prognoses.
+
+% proactive activity recording to provide sketches of a person's
+% activity profiles outside of the hospital, streaming data
+
+Yet so far, the ``medical history'' that EHRs have been used to store
+have constituted only the official diagnoses and diagnostic reports
+prepared by clinicians, technicians and nurses
+
 
 % challenges to 
 % background on authors
