--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -103,8 +103,9 @@ bi-directional, in the sense that the patient needs to be able to
 effectively interpret what the clincian is trying to convey to him or
 her, but also that the clinician needs to be able to arrive at an
 accurate characterisation of the patient's situation and condition, as
-updated since the patient was last seen, often under time pressure and
-other constraints. 
+updated since the patient was last seen. This is often under time
+pressure and with limited access to information about how the patient
+has been in the interim.
 
 One of the most promising technologies that has the potential to help
 provide such a common context is the patient-centric electronic health
@@ -122,14 +123,14 @@ the raw information that was the basis for a prognosis or decision.
 % activity profiles outside of the hospital, streaming data
 
 Yet, so far, EHRs have primarily been limited to the storage of
-official diagnoses and diagnostic reports prepared by clinicians,
-technicians and nurses.  These communications are both highly
-technical, making them difficult to interpret by end-user patients,
-but also highly limited in temporal resolution, reflecting only cases
-where a person was attended to and diagnostic-tested by a medical
-professional.  Although this may be frequent for patients in inpatient
-care, those that come to see their clinician, say, once a month end up
-with extremely low-resolution views of a patient's condition.
+official diagnostic reports prepared by clinicians, technicians and
+nurses.  These communications are both highly technical, making them
+difficult to interpret by end-user patients, but also highly limited
+in temporal resolution, reflecting only cases where a person was
+attended to and diagnostic-tested by a medical professional.  Although
+this may be frequent for patients in inpatient care, those that come
+to see their clinician, say, once a month end up with extremely
+low-resolution views of a patient's condition.
 
 In this position paper, we look at the potential and problems of
 augmenting the next generation of EHRs with \emph{personal activity
