--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -130,7 +130,7 @@ in temporal resolution, reflecting only cases where a person was
 attended to and diagnostic-tested by a medical professional.  Although
 this may be frequent for patients in inpatient care, those that come
 to see their clinician, say, once a month end up with extremely
-low-resolution views of a patient's condition.
+low-resolution samples of a patient's condition.
 
 In this position paper, we look at the potential and problems of
 augmenting the next generation of EHRs with \emph{personal activity
