--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -135,14 +135,20 @@ low-resolution samples of a patient's condition.
 In this position paper, we look at the potential and problems of
 augmenting the next generation of EHRs with \emph{personal activity
   diaries}, portraits of a person's dynamic condition captured at high
-temporal fidelity.  Such activity diaries, we posit, could be derived
-from a combination of automatically-sensed activity and vital
-statistics through a wide array of available consumer-grade
-network-enabled activity senors and diagnostic tools, as well as
-through manual annotations provided by patients about their day.
+temporal fidelity.  Such activity diaries are intended to supplement,
+rather than supplant, the existing diagnostic reports performed by
+professionals, first and foremost, to help clinicians derive a more
+complete picture of the person throughout a period of care, such as an
+intervention.  We believe that such activity diaries could potentially
+also be beneficial to individuals as well, making people more aware of
+the evolution of their health.
 
-\section{Personal Electronic Sensors}
+Nonetheless, challenges abound. These primarily pertain to capturing
+these activity diaries, effectively storing these diaries, and privacy
+controls for giving patients the ability to disclose desired quantities
+of their diary to their clinicians.  We discuss these, next.
 
+\section{Capturing activity diaries}
 There has been a surge in popularity of personal electronic sensors as
 part of the ``quantified-self'' movement to measure and improve one's health.
 Wireless sensors such as the Fit-bit and Nike FuelBand and small and discreet,
