--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -149,6 +149,8 @@ controls for giving patients the ability to disclose desired quantities
 of their diary to their clinicians.  We discuss these, next.
 
 \section{Capturing activity diaries}
+
+\subsection{Personal Electronic Sensors}
 There has been a surge in popularity of personal electronic sensors as
 part of the ``quantified-self'' movement to measure and improve one's health.
 Wireless sensors such as the Fit-bit and Nike FuelBand and small and discreet,
