--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -144,9 +144,10 @@ also be beneficial to individuals as well, making people more aware of
 the evolution of their health.
 
 Nonetheless, challenges abound. These primarily pertain to capturing
-these activity diaries, effectively storing these diaries, and privacy
-controls for giving patients the ability to disclose desired quantities
-of their diary to their clinicians.  We discuss these, next.
+these activity diaries, effectively storing these diaries, giving
+users easy-to-use access to these diaries, and privacy controls for
+giving patients the ability to disclose desired quantities of their
+diary to their clinicians.  We discuss these, next.
 
 \section{Capturing activity diaries}
 
