--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -151,17 +151,15 @@ diary to their clinicians.  We discuss these, next.
 
 \section{Capturing activity diaries}
 
-\subsection{Personal Electronic Sensors}
-There has been a surge in popularity of personal electronic sensors as
-part of the ``quantified-self'' movement to measure and improve one's health.
-Wireless sensors such as the Fit-bit and Nike FuelBand and small and discreet,
-yet provide the wearer with a wealth of information about their own activity level.
-In particular, wearers have a desire to improve their health and fitness, based on
-the feedback they receive from their device.
-
-The measurements from such devices are of particular interest because of the
-frequency and granularity of measurement that they perform - showing minute-by-minute updates
-throughout the day, with no clinical involvement. 
+\subsection{Automatic activity sensing and digital well-being}
+The recent proliferation in personal wearable activity sensors and
+network and storage- enabled digital health measurement devices has
+been driven by both the falling costs of embeddable electronics, and
+the demand for self-measurement from the ``quantified-self''\cite{}
+movement.  Wireless sensors such as the Fit-bit\cite{} and Nike
+FuelBand\cite{} and small, discreet, and low-cost, providing the
+wearer with high-resolution temporal data about their activity levels,
+with little or no effort.  
 
 In addition to fitness monitors, the market for quantified self sensors has
 expanded into areas of personal health. For example, there are sensors for
@@ -175,6 +173,15 @@ are presented either on the device themselves, or via a smartphone or website. H
 their use could be integrated with clinical care, in order to monitor patients, and to give an
 insight into their lifestyle.
 
+\section{Storing activity diaries}
+
+\section{Representing activity diaries}
+
+\section{Privacy Controls}
+
+\section{Conclusion}
+
+\section{Biographies}
 
 
 
