PCC Workshop update

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -175,14 +175,37 @@ insight into their lifestyle.
 
 \section{Storing activity diaries}
 
+The data collected by patients' devices has the potential to create a large volume of data, and therefore particular
+consideration should be paid about who and where the data will be stored. In particular, it is likely
+that existing providers of storage for electronic health records will not want to be burdened with the
+administration costs of storing additional data. The longevity of third-party storage providers is
+also a concern, because there has been a history of short-notice closures of EHR providers (such as Google Health).
+
+
 \section{Representing activity diaries}
+
+Particular care should be taken when deciding on a format to store the activity diaries. Ideally
+a format will be machine-readable, using open standards (for example XML, RDF or JSON) and
+following existing schematic/ontological knowledge modelling conventions. There are a 
+number of medical ontologies that already exist, as well as vocabularies and systems (such as
+SNOMED\cite{} and IDC-10) that focus on the medical domain. The hope is that by using
+such systems, that the data collected by patients can be analysed more rapidly by clinical systems
+and staff.
+
 
 \section{Privacy Controls}
 
+One of the major concerns with storage of patient data is privacy. Indeed, there is also potentially
+legal requirements on storing personal health data, depending on the nature of the data being
+stored.
+
+
 \section{Conclusion}
 
-\section{Biographies}
 
+
+\section{Biographies}
+?
 
 
 %% =============================================================================
