More about representation in PCC Workshop

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -192,12 +192,30 @@ SNOMED\cite{} and IDC-10) that focus on the medical domain. The hope is that by 
 such systems, that the data collected by patients can be analysed more rapidly by clinical systems
 and staff.
 
+One option is to embrace the Semantic Web, because it offers several key benefits:
+
+\begin{itemize}
+
+\item Distributed system with universal addresses and standard mature protocols
+\item Open extensible ontology system and existing domain ontologies
+\item Existing library and tool support and expertise
+\item Interoperability with existing systems
+
+\end{itemize}
+ 
+Even if personal health records or systems do not use the Semantic Web, there are existing
+techniques to integrate with their data.
+
 
 \section{Privacy Controls}
 
 One of the major concerns with storage of patient data is privacy. Indeed, there is also potentially
 legal requirements on storing personal health data, depending on the nature of the data being
 stored.
+
+However, it is important that control of data be sufficiently granular so that patients can choose
+to sure it with clinicians, and that clinicians can refer to it in their notes in the patient's health
+record.
 
 
 \section{Conclusion}
