table in margin

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -161,7 +161,10 @@ simultaneously, and most require little maintenance. Table
 \ref{sensors} lists a variety of such sensors, currently available
 readily from online retailers.
 
-\begin{table*}[htb]
+\newpage
+
+\marginpar{
+\begin{table}
 \small
 \begin{tabular}{p{5.0cm}  p{4cm} l}
 
@@ -179,7 +182,11 @@ body temperature & BodyMedia CORE 2 &  50-100 \\
 Eating & Hapifork & (not yet released) \\ 
 \end{tabular}
 \caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurememnt sensors with automatic data uplink to cloud services }
-\end{table*}
+\end{table}
+}
+
+\vspace{5cm}
+
 
 While few of these devices had been independently evaluated for
 accuracy for clinical use, as they have matured, several of these
