--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -182,6 +182,7 @@ body temperature & BodyMedia CORE 2 &  50-100 \\
 Eating & Hapifork & (not yet released) \\ 
 \end{tabular}
 \caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurememnt sensors with automatic data uplink to cloud services }
+\label{sensors}
 \end{table}
 }
 
