More collection words:

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -213,11 +213,15 @@ are presented either on the device themselves, or via a smartphone or website. H
 their use could be integrated with clinical care, in order to monitor patients, and to give an
 insight into their lifestyle.
 
-The data collected by patients' devices has the potential to create a large volume of data, and therefore particular
+In order to do this, the data from each device should be collected and archived, so it can
+be viewed together in an appropriate interface. The data collected by patients' devices has
+the potential to create a large volume of data, and therefore particular
 consideration should be paid about who and where the data will be stored. In particular, it is likely
 that existing providers of storage for electronic health records will not want to be burdened with the
 administration costs of storing additional data. The longevity of third-party storage providers is
 also a concern, because there has been a history of short-notice closures of EHR providers (such as Google Health).
+
+
 
 
 \section{Representing activity diaries}
