--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -166,27 +166,30 @@ readily from online retailers.
 \marginpar{
 \begin{table}
 \small
-\begin{tabular}{p{5.0cm}  p{4cm} l}
+\begin{tabular}{p{3cm}  p{6cm} p{1.5cm}}
 
- measurement & products & price range \\
+product & measurement indices & price range (approx. USD) \\
 \hline
-general activity (walking/jogging) & FitBit, Nike FuelBand  & 49-199 \\ 
-weight & Writhings WiFi Scale & 200 \\
-blood pressure & Writhings BPM & 200 \\ 
-sleep duration & Zeo Pro, WakeMate, & 100-300  \\
-heart rate variability & Zensorium Tinke & 200 \\
-blood oxygenation & Zensorium Tinke & 200 \\ 
-respiratory rate & Zensorium Tinke & 200 \\ 
-galvanic skin repsonse & BodyMedia CORE 2 &  50-100 \\
-body temperature & BodyMedia CORE 2 &  50-100 \\ 
-Eating & Hapifork & (not yet released) \\ 
+FitBit & general activity (walking/jogging) & \$50 \\
+Nike FuelBand & general activity (walking/jogging) & \$199 \\ 
+Writhings WiFi Scale & weight & \$200 \\
+Writhings BPM & blood pressure & \$200 \\ 
+Zeo Pro & sleep duration \& quality & \$200 \\
+WakeMate & sleep duration & \$50  \\
+Zensorium Tinkne & heart rate variability, blood oxygenation, respiratory rate & \$200 \\
+BodyMedia CORE 2 & galvanic skin repsonse, body temperature, sleep, respiratory rate, heart rate & \$50-100 \\
+body temperature & BodyMedia CORE 2 &  (TBD) \\ 
+Hapifork & eating time, rate, frequency & (TBD) \\ 
 \end{tabular}
 \caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurememnt sensors with automatic data uplink to cloud services }
 \label{sensors}
 \end{table}
 }
+\vspace{6cm}
 
-\vspace{5cm}
+
+
+
 
 
 While few of these devices had been independently evaluated for
