--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -231,7 +231,7 @@ Particular care should be taken when deciding on a format to store the activity 
 a format will be machine-readable, using open standards (for example XML, RDF or JSON) and
 following existing schematic/ontological knowledge modelling conventions. There are a 
 number of medical ontologies that already exist, as well as vocabularies and systems (such as
-SNOMED\cite{} and IDC-10) that focus on the medical domain. The hope is that by using
+SNOMED CT \cite{stearns2001snomed} and IDC-10) that focus on the medical domain. The hope is that by using
 such systems, that the data collected by patients can be analysed more rapidly by clinical systems
 and staff.
 
@@ -403,6 +403,6 @@ record.
 
 \balance
 \bibliographystyle{acm-sigchi}
-\bibliography{sample}
+\bibliography{pccworkshop}
 
 \end{document}
