Added mockup to margin

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -122,6 +122,18 @@ the raw information that was the basis for a prognosis or decision.
 % proactive activity recording to provide sketches of a person's
 % activity profiles outside of the hospital, streaming data
 
+\marginpar{
+\begin{figure}
+  \begin{center}
+  \includegraphics[width=\marginparwidth]{img/energy-scenario}
+  \caption{Mock-up of an activity diary dashboard, showing data from multiple devices.}
+  \label{fig:mockup}
+  \end{center}  
+\end{figure}
+}
+
+
+
 Yet, so far, EHRs have primarily been limited to the storage of
 official diagnostic reports prepared by clinicians, technicians and
 nurses.  These communications are both highly technical, making them
@@ -148,6 +160,11 @@ these activity diaries, effectively storing these diaries, giving
 users easy-to-use access to these diaries, and privacy controls for
 giving patients the ability to disclose desired quantities of their
 diary to their clinicians.  We discuss these, next.
+
+
+
+
+
 
 \section{Capturing activity diaries}
 
