--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -188,10 +188,6 @@ Hapifork & eating time, rate, frequency & (TBD) \\
 \vspace{6cm}
 
 
-
-
-
-
 While few of these devices had been independently evaluated for
 accuracy for clinical use, as they have matured, several of these
 manufacturers begun rigorous evaluaton of their products for achieving
@@ -212,21 +208,25 @@ metrics.
 
 \section{Storing activity diaries}
 
-Currently these products tend to work in isolation, where the readings from a single product
-are presented either on the device themselves, or via a smartphone or website. However,
-their use could be integrated with clinical care, in order to monitor patients, and to give an
-insight into their lifestyle.
+Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. 
 
-In order to do this, the data from each device should be collected and archived, so it can
-be viewed together in an appropriate interface. The data collected by patients' devices has
-the potential to create a large volume of data, and therefore particular
-consideration should be paid about who and where the data will be stored. In particular, it is likely
-that existing providers of storage for electronic health records will not want to be burdened with the
-administration costs of storing additional data. The longevity of third-party storage providers is
-also a concern, because there has been a history of short-notice closures of EHR providers (such as Google Health).
+Fortunately, many of these sites have APIs, which makes it feasible to access captured data from the devices by way of these web services.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single reprsentation kept with their EHR.  In particular, grounding this activity data in a common taxonomy with associated description logic, like those provided for medical diagnoses and diseases through SNOWMED-CT \cite{snowmed} and ICD-10 \cite{icd}, could enable these diaries to interpreted directly by clinical medical systems, such as primary care information management systems. 
 
+%% Such a representation might enable GPs to more quickly understand a   such as for providing
+%% like the SNOWMEDif Building such a representation, however, makes several assumptions, the 
+%%   We propose that   to be harvested and stored into unified representations, such as to be stored with a person's 
+%%   single product are peruploaded by the devices to 
+%% are presented either on the device themselves, or via a smartphone or website. However,
+%% their use could be integrated with clinical care, in order to monitor patients, and to give an
+%% insight into their lifestyle.
 
-
+%% In order to do this, the data from each device should be collected and archived, so it can
+%% be viewed together in an appropriate interface. The data collected by patients' devices has
+%% the potential to create a large volume of data, and therefore particular
+%% consideration should be paid about who and where the data will be stored. In particular, it is likely
+%% that existing providers of storage for electronic health records will not want to be burdened with the
+%% administration costs of storing additional data. The longevity of third-party storage providers is
+%% also a concern, because there has been a history of short-notice closures of EHR providers (such as Google Health).
 
 \section{Representing activity diaries}
 
