--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -227,7 +227,7 @@ metrics.
 
 Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, 'user-friendly' units, such as 'Sleep score', 'Fuel', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
 
-Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single reprsentation kept with their EHR.  In particular, grounding this activity data in a common taxonomy with associated description logic, like those provided for medical diagnoses and diseases through SNOWMED-CT \cite{stearns2001snomed} and ICD-10 \cite{icd}, could enable these diaries to interpreted directly by clinical medical systems, such as primary care information management systems. 
+Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single reprsentation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOWMED-CT \cite{stearns2001snomed} and ICD-10 \cite{icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
 %% Such a representation might enable GPs to more quickly understand a   such as for providing
 %% like the SNOWMEDif Building such a representation, however, makes several assumptions, the 
