--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -6,3 +6,20 @@
   year={2001},
   organization={American Medical Informatics Association}
 }
+
+@book{world1993icd,
+  title={The ICD-10 classification of mental and behavioural disorders: diagnostic criteria for research},
+  author={World Health Organization},
+  year={1993},
+  publisher={World Health Organization}
+}
+
+@article{hayrinen2008definition,
+  title={Definition, structure, content, use and impacts of electronic health records: a review of the research literature.},
+  author={H{\"a}yrinen, K. and Saranto, K. and Nyk{\"a}nen, P. and others},
+  journal={International journal of medical informatics},
+  volume={77},
+  number={5},
+  pages={291},
+  year={2008}
+}
