Enbiggen the image

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -124,11 +124,10 @@ the raw information that was the basis for a prognosis or decision.
 
 \marginpar{
 \begin{figure}
-  \begin{center}
-  \includegraphics[width=\marginparwidth]{img/energy-scenario}
+  \hspace{-11mm}
+  \includegraphics[width=5.5cm]{img/energy-scenario}
   \caption{Mock-up of an activity diary dashboard, showing data from multiple devices.}
   \label{fig:mockup}
-  \end{center}  
 \end{figure}
 }
 
