--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -193,8 +193,7 @@ Writhings BPM & blood pressure & \$200 \\
 Zeo Pro & sleep duration \& quality & \$200 \\
 WakeMate & sleep duration & \$50  \\
 Zensorium Tinkne & heart rate variability, blood oxygenation, respiratory rate & \$200 \\
-BodyMedia CORE 2 & galvanic skin repsonse, body temperature, sleep, respiratory rate, heart rate & \$50-100 \\
-body temperature & BodyMedia CORE 2 &  (TBD) \\ 
+BodyMedia CORE 2 & galvanic skin repsonse, body temperature, sleep, respiratory rate, heart rate & (TBD) \\
 Hapifork & eating time, rate, frequency & (TBD) \\ 
 \end{tabular}
 \caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurememnt sensors with automatic data uplink to cloud services }
