--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -160,9 +160,21 @@ users easy-to-use access to these diaries, and privacy controls for
 giving patients the ability to disclose desired quantities of their
 diary to their clinicians.  We discuss these, next.
 
+\section{Using activity diaries}
 
-
-
+We imagine integrated activity diaries to be used by both clinicans
+and patients in several ways.  First, for nearly all types of
+conditions, monitoring a person's overall daily activity and sleep
+duration can easily indicate how much rest, exercise, exposure to
+others, and the outside world he or she might be getting.  Daily
+records of the time(s) that a person gets up, eats, works, exercises
+and relaxes can be analysed by clincians for irregular behaviours or
+habits that might be affecting a person's well-being. For more
+specific conditions, daily measurements of a person's blood pressure,
+blood oxidation, heart rate, breathing, weight, and galvanic skin
+response could be useful for tracking progress along an clinician
+prescribed intervention, recovery from illness, or onset of new
+conditions, be used to pinpoint sources of prolonged stress.
 
 
 \section{Capturing activity diaries}
@@ -171,8 +183,8 @@ The recent proliferation in personal wearable activity sensors and
 network and storage- enabled digital health measurement devices has
 been driven by both the falling costs of embeddable electronics, and a
 surging public interest in ``quantified-self''-style self-monitoring
-for self-improvement.  Many of these sensors are lightweight,
-can be worn discreetly, measure several physiological statistics
+for self-improvement.  Many of these sensors are lightweight, can be
+worn discreetly, measure several physiological statistics
 simultaneously, and most require little maintenance. Table
 \ref{sensors} lists a variety of such sensors, currently available
 readily from online retailers.
@@ -223,7 +235,7 @@ metrics.
 
 \section{Storing activity diaries}
 
-Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, 'user-friendly' units, such as 'Sleep score', 'Fuel', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
+Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees!).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, 'user-friendly' units, such as 'Sleep score', 'Fuel', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
 
 Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single reprsentation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOWMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
@@ -266,7 +278,6 @@ One option is to embrace the Semantic Web, because it offers several key benefit
  
 Even if personal health records or systems do not use the Semantic Web, there are existing
 techniques to integrate with their data.
-
 
 \section{Privacy Controls}
 
